Create a basic end-to-end test

--- a/src/composer.json
+++ b/src/composer.json
@@ -4,5 +4,12 @@
     "psr-4": {
       "MDM23\\LaravelAdminer\\": "LaravelAdminer/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "MDM23\\LaravelAdminer\\AdminerServiceProvider"
+      ]
+    }
   }
 }
