--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,17 @@
     "psr-4": {
       "MDM23\\LaravelAdminer\\": "src/LaravelAdminer/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "MDM23\\LaravelAdminer\\AdminerServiceProvider"
+      ]
+    }
+  },
+  "require-dev": {
+    "chrome-php/chrome": "^0.6.0",
+    "symfony/process": "^4.2",
+    "webmozart/assert": "^1.4"
   }
 }
