--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,26 @@
 language: php
 addons:
   chrome: stable
-php:
-  - "7.3"
+services:
+  - mysql
+matrix:
+  include:
+  - php: 7.1
+    env: LARAVEL_VERSION=5.5
+  - php: 7.1
+    env: LARAVEL_VERSION=5.7
+  - php: 7.2
+    env: LARAVEL_VERSION=5.5
+  - php: 7.2
+    env: LARAVEL_VERSION=5.7
+  - php: 7.3
+    env: LARAVEL_VERSION=5.5
+  - php: 7.3
+    env: LARAVEL_VERSION=5.7
 env:
   - CHROME_BINARY="google-chrome-stable"
+  - COMPOSER_NO_INTERACTION="1"
+  - DB_USERNAME="root"
+  - DB_PASSWORD="root"
 script:
   - make test
