--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,12 @@ php:
   - 7.3
 env:
   global:
-    - CHROME_BINARY="google-chrome-stable"
-    - COMPOSER_NO_INTERACTION="1"
-    - DB_USERNAME="root"
-    - DB_PASSWORD="root"
+    - CHROME_BINARY=google-chrome-stable
+    - COMPOSER_NO_INTERACTION=1
+    - DB_USERNAME=root
+    - DB_PASSWORD=root
   matrix:
     - LARAVEL_VERSION=5.5
     - LARAVEL_VERSION=5.7
-env:
-  - CHROME_BINARY="google-chrome-stable"
-  - COMPOSER_NO_INTERACTION="1"
-  - DB_USERNAME="root"
-  - DB_PASSWORD="root"
 script:
   - make test
